[dev] implemented visualizzazione utenti + updated paths APIs (/api/...) + modified schema utente (added attribute stato Attivo or disattivato)
